Skeleton API completed

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,17 +8,10 @@
     <body>
         <div class="container py-5">
         
-            <form class="md-form">
-                <div class="file-field">
-                  <div class="btn btn-primary btn-sm float-left">
-                    <span>Choose file</span>
-                    <input type="file">
-                  </div>
-                  <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text" placeholder="Upload your file">
-                  </div>
-                </div>
-              </form>
+          <form method=post enctype=multipart/form-data >
+            <input type=file name=file>
+            <input type=submit value=Upload>
+          </form>
     </body>
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
